--- a/src/styles.css
+++ b/src/styles.css
@@ -1,17 +1,3 @@
-body,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: "Lato", sans-serif;
-}
-.bar,
-h1,
-button {
-  font-family: "Montserrat", sans-serif;
-}
 *,
 *:before,
 *:after {
@@ -167,7 +153,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Segoe UI", Arial, sans-serif;
+  font-family: "Lato", Arial, sans-serif;
   font-weight: 400;
   margin: 10px 0;
 }
@@ -683,7 +669,7 @@ form > span {
 
 #jumbo-image {
   max-height: 20rem;
-  filter: invert(1);
+  /* TODO: Invert banner colors using CSS */
 }
 
 @media (max-width: 600px) {
@@ -890,7 +876,8 @@ form > span {
 
 #challenge-grid {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  /* TODO: Fix Issue, Tiles Need to be 2x2 Grid. Change only grid-template-columns */
+  grid-template-columns: none;
   grid-auto-rows: 10rem;
   gap: 1rem;
   padding-top: 2rem;
