--- a/src/styles.css
+++ b/src/styles.css
@@ -364,7 +364,7 @@ form > span {
   top: 6px;
 }
 
-.challenge-tile {
+.challenge-tile { 
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -877,7 +877,7 @@ form > span {
 #challenge-grid {
   display: grid;
   /* TODO: Fix Issue, Tiles Need to be 2x2 Grid. Change only grid-template-columns */
-  grid-template-columns: none;
+  grid-template-columns: 50% auto;
   grid-auto-rows: 10rem;
   gap: 1rem;
   padding-top: 2rem;
