--- a/src/styles.css
+++ b/src/styles.css
@@ -670,6 +670,7 @@ form > span {
 #jumbo-image {
   max-height: 20rem;
   /* TODO: Invert banner colors using CSS */
+  filter: invert(1);
 }
 
 @media (max-width: 600px) {
