--- a/src/styles.css
+++ b/src/styles.css
@@ -669,6 +669,7 @@ form > span {
 
 #jumbo-image {
   max-height: 20rem;
+  filter: invert(1);
   /* TODO: Invert banner colors using CSS */
 }
 
@@ -877,7 +878,7 @@ form > span {
 #challenge-grid {
   display: grid;
   /* TODO: Fix Issue, Tiles Need to be 2x2 Grid. Change only grid-template-columns */
-  grid-template-columns: none;
+  grid-template-columns: 50% 50%;
   grid-auto-rows: 10rem;
   gap: 1rem;
   padding-top: 2rem;
