--- a/src/styles.css
+++ b/src/styles.css
@@ -543,8 +543,8 @@ form > span {
 #nav-signup {
 	display: none;
 }
-
 @media (min-width: 601px) {
+	#nav-logo,
 	#nav-challenges,
 	#nav-signup {
 		display: block;
