Fix Issue #3 (inverted banner image colors bug)

--- a/src/styles.css
+++ b/src/styles.css
@@ -669,7 +669,7 @@ form > span {
 
 #jumbo-image {
   max-height: 20rem;
-  /* TODO: Invert banner colors using CSS */
+  filter: invert(100%);
 }
 
 @media (max-width: 600px) {
