--- a/src/styles.css
+++ b/src/styles.css
@@ -877,8 +877,8 @@ form > span {
 
 #challenge-grid {
   display: grid;
-  /* TODO: Fix Issue, Tiles Need to be 2x2 Grid. Change only grid-template-columns */
-  grid-template-columns: none;
+  /* DONE: Fix Issue, Tiles Need to be 2x2 Grid. Change only grid-template-columns */
+  grid-template-columns: 1fr 1fr;
   grid-auto-rows: 10rem;
   gap: 1rem;
   padding-top: 2rem;
