--- a/src/styles.css
+++ b/src/styles.css
@@ -669,7 +669,7 @@ form > span {
 
 #jumbo-image {
   max-height: 20rem;
-  /* TODO: Invert banner colors using CSS */
+  filter: invert(100)
 }
 
 @media (max-width: 600px) {
@@ -795,14 +795,14 @@ form > span {
 .display-left {
   position: absolute;
   top: 50%;
-  left: 0%;
+  left: 0;
   transform: translate(0%, -50%);
   -ms-transform: translate(-0%, -50%);
 }
 .display-right {
   position: absolute;
   top: 50%;
-  right: 0%;
+  right: 0;
   transform: translate(0%, -50%);
   -ms-transform: translate(0%, -50%);
 }
@@ -870,14 +870,14 @@ form > span {
 }
 .code,
 .codespan {
-  font-family: Consolas, "courier new";
+  font-family: Consolas, "courier new", sans-serif;
   font-size: 16px;
 }
 
 #challenge-grid {
   display: grid;
   /* TODO: Fix Issue, Tiles Need to be 2x2 Grid. Change only grid-template-columns */
-  grid-template-columns: none;
+  grid-template-columns: 10fr 10fr;
   grid-auto-rows: 10rem;
   gap: 1rem;
   padding-top: 2rem;
