--- a/src/styles.css
+++ b/src/styles.css
@@ -669,7 +669,7 @@ form > span {
 
 #jumbo-image {
   max-height: 20rem;
-  /* TODO: Invert banner colors using CSS */
+  /* DONE: Invert banner colors using CSS */
   filter: invert(100%);
 }
 
@@ -877,7 +877,7 @@ form > span {
 
 #challenge-grid {
   display: grid;
-  /* TODO: Fix Issue, Tiles Need to be 2x2 Grid. Change only grid-template-columns */
+  /* DONE: Fix Issue, Tiles Need to be 2x2 Grid. Change only grid-template-columns */
   grid-template-columns: 1fr 1fr;
   grid-auto-rows: 10rem;
   gap: 1rem;
