--- a/src/styles.css
+++ b/src/styles.css
@@ -665,11 +665,13 @@ form > span {
   .auto {
     max-width: 95%;
   }
+  
 }
 
 #jumbo-image {
   max-height: 20rem;
   /* TODO: Invert banner colors using CSS */
+  filter: invert();
 }
 
 @media (max-width: 600px) {
@@ -877,7 +879,7 @@ form > span {
 #challenge-grid {
   display: grid;
   /* TODO: Fix Issue, Tiles Need to be 2x2 Grid. Change only grid-template-columns */
-  grid-template-columns: none;
+  grid-template-columns: 1fr 1fr;
   grid-auto-rows: 10rem;
   gap: 1rem;
   padding-top: 2rem;
