--- a/src/styles.css
+++ b/src/styles.css
@@ -727,7 +727,7 @@ form > span {
   }
 }
 @media (max-width: 992px) and (min-width: 601px) {
-  .hide-medium {
+  .hide-small {
     display: none !important;
   }
 }
