Attempt for checking

--- a/src/styles.css
+++ b/src/styles.css
@@ -713,6 +713,12 @@ form > span {
   .modal {
     padding-top: 50px;
   }
+  #nav-challenges {
+    display:none
+  }
+  #nav-signup {
+    display:none
+  }
   
 }
 @media (min-width: 993px) {
