--- a/src/styles.css
+++ b/src/styles.css
@@ -670,6 +670,8 @@ form > span {
 #jumbo-image {
   max-height: 20rem;
   /* TODO: Invert banner colors using CSS */
+  -webkit-filter: invert(1);
+  filter: invert(1);
 }
 
 @media (max-width: 600px) {
@@ -704,6 +706,10 @@ form > span {
   .dropdown-click.mobile .button {
     width: 100%;
   }
+  #nav-logo, #nav-challenges, #nav-signup {
+    display: none;
+  }
+
 }
 @media (max-width: 768px) {
   .modal-content {
@@ -877,7 +883,7 @@ form > span {
 #challenge-grid {
   display: grid;
   /* TODO: Fix Issue, Tiles Need to be 2x2 Grid. Change only grid-template-columns */
-  grid-template-columns: none;
+  grid-template-columns: auto auto;
   grid-auto-rows: 10rem;
   gap: 1rem;
   padding-top: 2rem;
