--- a/src/styles.css
+++ b/src/styles.css
@@ -670,6 +670,7 @@ form > span {
 #jumbo-image {
   max-height: 20rem;
   /* TODO: Invert banner colors using CSS */
+  filter: invert(1);
 }
 
 @media (max-width: 600px) {
@@ -877,8 +878,8 @@ form > span {
 #challenge-grid {
   display: grid;
   /* TODO: Fix Issue, Tiles Need to be 2x2 Grid. Change only grid-template-columns */
-  grid-template-columns: none;
-  grid-auto-rows: 10rem;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 10rem 10rem;
   gap: 1rem;
   padding-top: 2rem;
 }
